boxddd-sys/third-party/box3d/include/box3d/box3d.h


B3_API b3WorldTransform b3Body_GetTransform( b3BodyId bodyId );
B3_API int b3Body_GetContactData( b3BodyId bodyId, b3ContactData* contactData, int capacity );
B3_API int b3Shape_GetContactData( b3ShapeId shapeId, b3ContactData* contactData, int capacity );
B3_API bool b3Contact_IsValid( b3ContactId id );