boxddd-sys/third-party/box3d/include/box3d/types.h


typedef struct b3ContactBeginTouchEvent
{
	b3ShapeId shapeIdA;
	b3ShapeId shapeIdB;
	b3ContactId contactId;
} b3ContactBeginTouchEvent;
typedef struct b3ContactEndTouchEvent
{
	b3ShapeId shapeIdA;
	b3ShapeId shapeIdB;
	b3ContactId contactId;
} b3ContactEndTouchEvent;
typedef struct b3ContactHitEvent
{
	b3ShapeId shapeIdA;
	b3ShapeId shapeIdB;
	b3ContactId contactId;
	b3Pos point;
	b3Vec3 normal;
	float approachSpeed;
	uint64_t userMaterialIdA;
	uint64_t userMaterialIdB;
} b3ContactHitEvent;
typedef struct b3ContactEvents
{
	b3ContactBeginTouchEvent* beginEvents;
	b3ContactEndTouchEvent* endEvents;
	b3ContactHitEvent* hitEvents;
	int beginCount;
	int endCount;
	int hitCount;
} b3ContactEvents;
typedef struct b3BodyMoveEvent
{
	void* userData;
	b3WorldTransform transform;
	b3BodyId bodyId;
	bool fellAsleep;
} b3BodyMoveEvent;
typedef struct b3BodyEvents
{
	b3BodyMoveEvent* moveEvents;
	int moveCount;
} b3BodyEvents;
typedef struct b3JointEvent
{
	b3JointId jointId;
	void* userData;
} b3JointEvent;
typedef struct b3JointEvents
{
	b3JointEvent* jointEvents;
	int count;
} b3JointEvents;
typedef struct b3ContactData
{
	b3ContactId contactId;
	b3ShapeId shapeIdA;
	b3ShapeId shapeIdB;
	const struct b3Manifold* manifolds;
	int manifoldCount;
} b3ContactData;
typedef struct b3QueryFilter
{
	uint64_t categoryBits;
	uint64_t maskBits;
	uint64_t id;
	const char* name;
} b3QueryFilter;
B3_API b3QueryFilter b3DefaultQueryFilter( void );
typedef struct b3RayCastInput
{
	b3Vec3 origin;
	b3Vec3 translation;
	float maxFraction;
} b3RayCastInput;
typedef struct b3RayResult
{
	b3ShapeId shapeId;
	b3Pos point;
	b3Vec3 normal;
	uint64_t userMaterialId;
	float fraction;
	int triangleIndex;
	int childIndex;
	int nodeVisits;
	int leafVisits;
	bool hit;
} b3RayResult;
typedef struct b3ShapeProxy
{
	const b3Vec3* points;
	int count;
	float radius;
} b3ShapeProxy;
typedef struct b3ShapeCastInput
{
	b3ShapeProxy proxy;
	b3Vec3 translation;
	float maxFraction;
	bool canEncroach;
} b3ShapeCastInput;
typedef struct b3BoxCastInput
{
	b3AABB box;
	b3Vec3 translation;
	float maxFraction;
} b3BoxCastInput;
typedef struct b3CastOutput
{
	b3Vec3 normal;
	b3Vec3 point;
	float fraction;
	int iterations;
	int triangleIndex;
	int childIndex;
	int materialIndex;
	bool hit;
} b3CastOutput;
typedef struct b3WorldCastOutput
{
	b3Vec3 normal;
	b3Pos point;
	float fraction;
	int iterations;
	int triangleIndex;
	int childIndex;
	int materialIndex;
	bool hit;
} b3WorldCastOutput;
typedef b3CastOutput b3WorldCastOutput;
typedef struct b3BodyCastResult
{
	b3ShapeId shapeId;
	b3Pos point;
	b3Vec3 normal;
	float fraction;
	int triangleIndex;
	uint64_t userMaterialId;
	int iterations;
	bool hit;
} b3BodyCastResult;
typedef struct b3SimplexCache
{
	float metric;
	uint16_t count;
	uint8_t indexA[4];
	uint8_t indexB[4];
} b3SimplexCache;
typedef struct b3ManifoldPoint
{
	b3Vec3 anchorA;
	b3Vec3 anchorB;
	float separation;
	float baseSeparation;
	float normalImpulse;
	float totalNormalImpulse;
	float normalVelocity;
	uint32_t featureId;
	int triangleIndex;
	bool persisted;
} b3ManifoldPoint;
typedef struct b3StepImpulses
{
	float normalImpulses[B3_MAX_MANIFOLD_POINTS];
	b3Vec3 frictionImpulse;
	b3Vec3 angularImpulse;
	b3Vec3 frictionAnchorA, frictionAnchorB;
	uint64_t stepIndex;
} b3StepImpulses;
typedef struct b3Manifold
{
	b3ManifoldPoint points[B3_MAX_MANIFOLD_POINTS];
	b3Vec3 normal;
	float twistImpulse;
	b3Vec3 frictionImpulse;
	b3Vec3 rollingImpulse;
	int pointCount;
	b3StepImpulses stepImpulses;
} b3Manifold;