boxddd-sys/src/bindings_pregenerated.rs

/** A hit touch event is generated when two shapes collide with a speed faster than the hit speed threshold.
 This may be reported for speculative contacts that have a confirmed impulse.*/
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3ContactHitEvent {
    /// Id of the first shape
    pub shapeIdA: b3ShapeId,
    /// Id of the second shape
    pub shapeIdB: b3ShapeId,
    /** Id of the contact.
	@warning this contact may have been destroyed
	@see b3Contact_IsValid*/
    pub contactId: b3ContactId,
    /** Point where the shapes hit at the beginning of the time step.
 This is a mid-point between the two surfaces. It could be at speculative
 point where the two shapes were not touching at the beginning of the time step.*/
    pub point: b3Pos,
    /// Normal vector pointing from shape A to shape B
    pub normal: b3Vec3,
    /// The speed the shapes are approaching. Always positive. Typically in meters per second.
    pub approachSpeed: f32,
    /// User material on shape A
    pub userMaterialIdA: u64,
    /// User material on shape B
    pub userMaterialIdB: u64,
}
/** Contact events are buffered in the world and are available
	as event arrays after the time step is complete.
	Note: these may become invalid if bodies and/or shapes are destroyed*/
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3ContactEvents {
    /// Array of begin touch events
    pub beginEvents: *mut b3ContactBeginTouchEvent,
    /// Array of end touch events
    pub endEvents: *mut b3ContactEndTouchEvent,
    /// Array of hit events
    pub hitEvents: *mut b3ContactHitEvent,
    /// Number of begin touch events
    pub beginCount: ::std::os::raw::c_int,
    /// Number of end touch events
    pub endCount: ::std::os::raw::c_int,
    /// Number of hit events
    pub hitCount: ::std::os::raw::c_int,
}
/** Body move events triggered when a body moves.
 Triggered when a body moves due to simulation. Not reported for bodies moved by the user.
 This also has a flag to indicate that the body went to sleep so the application can also
 sleep that actor/entity/object associated with the body.
 On the other hand if the flag does not indicate the body went to sleep then the application
 can treat the actor/entity/object associated with the body as awake.
 This is an efficient way for an application to update game object transforms rather than
 calling functions such as b3Body_GetTransform() because this data is delivered as a contiguous array
 and it is only populated with bodies that have moved.
 @note If sleeping is disabled all dynamic and kinematic bodies will trigger move events.*/
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3BodyMoveEvent {
    /// The body user data.
    pub userData: *mut ::std::os::raw::c_void,
    /// The body transform.
    pub transform: b3WorldTransform,
    /// The body id.
    pub bodyId: b3BodyId,
    /// Did the body fall asleep this time step?
    pub fellAsleep: bool,
}
/** Body events are buffered in the world and are available
	as event arrays after the time step is complete.
	Note: this data becomes invalid if bodies are destroyed*/
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3BodyEvents {
    /// Array of move events
    pub moveEvents: *mut b3BodyMoveEvent,
    /// Number of move events
    pub moveCount: ::std::os::raw::c_int,
}
/** Joint events report joints that are awake and have a force and/or torque exceeding the threshold
 The observed forces and torques are not returned for efficiency reasons.*/
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3JointEvent {
    /// The joint id
    pub jointId: b3JointId,
    /// The user data from the joint for convenience
    pub userData: *mut ::std::os::raw::c_void,
}
/** Joint events are buffered in the world and are available
 as event arrays after the time step is complete.
 Note: this data becomes invalid if joints are destroyed*/
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3JointEvents {
    /// Array of events
    pub jointEvents: *mut b3JointEvent,
    /// Number of events
    pub count: ::std::os::raw::c_int,
}
/** The contact data for two shapes. By convention the manifold normal points
 from shape A to shape B.
 @see b3Shape_GetContactData() and b3Body_GetContactData()*/
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3ContactData {
    /** The contact id. You may hold onto this to track a contact across time steps.
 This id may become orphaned. Use b3Contact_IsValid before using it for other functions.*/
    pub contactId: b3ContactId,
    /// The first shape id.
    pub shapeIdA: b3ShapeId,
    /// The second shape id.
    pub shapeIdB: b3ShapeId,
    /** The contact manifold. This points to internal data and may become invalid. Do not store
 this pointer.*/
    pub manifolds: *const b3Manifold,
    /// The number of contact manifolds. For mesh and height-field collision there can be multiple manifolds.
    pub manifoldCount: ::std::os::raw::c_int,
}
/** The query filter is used to filter collisions between queries and shapes. For example,
 you may want a ray-cast representing a projectile to hit players and the static environment
 but not debris.*/
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3QueryFilter {
    /// The collision category bits of this query. Normally you would just set one bit.
    pub categoryBits: u64,
    /** The collision mask bits. This states the shape categories that this
 query would accept for collision.*/
    pub maskBits: u64,
    /** Optional id combined with @ref name to identify this query in a recording, e.g. an entity id.
 Need not be unique on its own. 0 with a null name means untagged. Ignored when not recording.*/
    pub id: u64,
    /** Optional label combined with @ref id to identify this query, e.g. "bullet". Need not be unique
 on its own. The recorder hashes (id, name) into one stable key the viewer tracks the query by,
 so the same id and name pair identifies the same query across frames. NULL means none. Ignored
 when not recording.*/
    pub name: *const ::std::os::raw::c_char,
}
unsafe extern "C" {
    /// Use this to initialize your query filter
    pub fn b3DefaultQueryFilter() -> b3QueryFilter;
}
/// Low level ray cast input data.
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3RayCastInput {
    /// Start point of the ray cast.
    pub origin: b3Vec3,
    /** Translation of the ray cast.
 end = start + translation.*/
    pub translation: b3Vec3,
    /// The maximum fraction of the translation to consider, typically 1
    pub maxFraction: f32,
}
/// Result from b3World_RayCastClosest.
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3RayResult {
    /// The shape hit.
    pub shapeId: b3ShapeId,
    /// The world point of the hit.
    pub point: b3Pos,
    /// The world normal of the shape surface at the hit point.
    pub normal: b3Vec3,
    /** The user material id at the hit point. This can be per triangle
 if the shape is a mesh, height-field, or compound with child mesh.*/
    pub userMaterialId: u64,
    /// The fraction of the input ray.
    pub fraction: f32,
    /** The triangle index if the shape is a mesh, height-field, or compound with
 child mesh.*/
    pub triangleIndex: ::std::os::raw::c_int,
    /// The child index if the shape is a compound.
    pub childIndex: ::std::os::raw::c_int,
    /// The number of BVH nodes visited. Diagnostic.
    pub nodeVisits: ::std::os::raw::c_int,
    /// The number of BVH leaves visited. Diagnostic.
    pub leafVisits: ::std::os::raw::c_int,
    /// Did the ray hit? If false, all other data is invalid.
    pub hit: bool,
}
/// A shape proxy is used by the GJK algorithm. It can represent a convex shape.
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3ShapeProxy {
    /// The point cloud.
    pub points: *const b3Vec3,
    /// The number of points. Do not exceed B3_MAX_SHAPE_CAST_POINTS.
    pub count: ::std::os::raw::c_int,
    /// The external radius of the point cloud.
    pub radius: f32,
}
/** Low level shape cast input in generic form. This allows casting an arbitrary point
 cloud wrap with a radius. For example, a sphere is a single point with a non-zero radius.
 A capsule is two points with a non-zero radius. A box is four points with a zero radius.*/
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3ShapeCastInput {
    /// A generic query shape.
    pub proxy: b3ShapeProxy,
    /// The translation of the shape cast.
    pub translation: b3Vec3,
    /// The maximum fraction of the translation to consider, typically 1.
    pub maxFraction: f32,
    /// Allow shape cast to encroach when initially touching. This only works if the radius is greater than zero.
    pub canEncroach: bool,
}
/** Input for sweeping an AABB through a dynamic tree. The box is in the tree's world float frame.
 The caller folds the cast shape radius and any world origin into the box, so the tree traversal
 stays a conservative box sweep and the precise narrow phase happens per shape in the callback.*/
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3BoxCastInput {
    /// The AABB to cast, in the tree's frame.
    pub box_: b3AABB,
    /// The sweep translation.
    pub translation: b3Vec3,
    /// The maximum fraction of the translation to consider, typically 1.
    pub maxFraction: f32,
}
/// Low level ray cast or shape-cast output data.
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3CastOutput {
    /// The surface normal at the hit point.
    pub normal: b3Vec3,
    /// The surface hit point.
    pub point: b3Vec3,
    /// The fraction of the input translation at collision.
    pub fraction: f32,
    /// The number of iterations used.
    pub iterations: ::std::os::raw::c_int,
    /// The index of the mesh or height field triangle hit.
    pub triangleIndex: ::std::os::raw::c_int,
    /// The index of the compound child shape.
    pub childIndex: ::std::os::raw::c_int,
    /// The material index. May be -1 for null.
    pub materialIndex: ::std::os::raw::c_int,
    /// Did the cast hit?
    pub hit: bool,
}
/// Same type in single precision.
pub type b3WorldCastOutput = b3CastOutput;
/// Body cast result for ray and shape casts.
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3BodyCastResult {
    /// The shape hit.
    pub shapeId: b3ShapeId,
    /// The world point on the shape surface.
    pub point: b3Pos,
    /// The world normal vector on the shape surface.
    pub normal: b3Vec3,
    /** The fraction along the ray hit.
 hit point = origin + fraction * translation*/
    pub fraction: f32,
    /// The triangle index if the shape is a mesh or height-field.
    pub triangleIndex: ::std::os::raw::c_int,
    /** The user material id at the hit point. This can be per triangle
 if the shape is a mesh, height-field, or compound with child mesh.*/
    pub userMaterialId: u64,
    /// The number of iterations used. Diagnostic.
    pub iterations: ::std::os::raw::c_int,
    /// Did the cast hit? If false, all other fields are invalid.
    pub hit: bool,
}
/** Used to warm start the GJK simplex. If you call this function multiple times with nearby
 transforms this might improve performance. Otherwise you can zero initialize this.
 The distance cache must be initialized to zero on the first call.
 Users should generally just zero initialize this structure for each call.*/
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3SimplexCache {
    /// Value use to compare length, area, volume of two simplexes.
    pub metric: f32,
    /// The number of stored simplex points
    pub count: u16,
    /// The cached simplex indices on shape A
    pub indexA: [u8; 4usize],
    /// The cached simplex indices on shape B
    pub indexB: [u8; 4usize],
}
